[package]
name = "village_kernel"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
crate-type = ["rlib", "staticlib"]
test = false
bench = false

[[bin]]
name = "village_kernel"
test = false
bench = false

[dependencies]
spin = "0.9"
paste = "1.0"

[build-dependencies]
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
