[package]
name = "village_kernel"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
default = ["arch_i386", "binding_exec_bin"]
arch_arm = []
arch_i386 = []
binding_exec_elf = []
binding_exec_hex = []
binding_exec_bin = []

[lib]
name = "vk"
test = false
bench = false

[[bin]]
name = "village_kernel"
test = false
bench = false

[dependencies]
spin = "0.9"
paste = "1.0"

[build-dependencies]
time = { version = "0.3", features = ["macros", "formatting", "local-offset"] }
